--------------------------------------------------------------------------------------------------
Release notes version 1.9.4_beta : Enhancements, modifications and corrected bugs since version 1.9.3 :
--------------------------------------------------------------------------------------------------
13/05/24 (TRUST) New feature  : New LES Smago/WALE models developped for Pb_Multiphase. To be used in TrioCFD (CMFD module !)
06/05/24 (TRUST) New feature  : Performance logs (TU files): XX_comm.TU and XX_detail.TU have been replaced by XX_csv.TU which contains a CSV formated logs of the computation times. Keyword 'stat_per_proc_perf_log' can be used to obtain detailed performance logs per processor. See validation form 'HowTo/Post_treatment_performance' for detailed explanation on how global TU information are computed.
30/04/24 (TRUST) New Keywords : 'Fields_file', 'Statistics_file', 'Serial_statistics_file', 'Mobile_Probes_file', 'Int_Probes_file' and 'Int_Arrays_file'
                                can now be used to define post-processing blocs in an annex datafile. See 'postpro_annex_file' test case
12/04/24 (TRUST) Keyword      : .xyz file may be written in ASCII format with "EcritureLectureSpecial EcrFicPartage" keyword. Fields are written in "x(i) y(i) z(i) value(i)" format
10/04/24 (TRUST) Fix          : Element-wall distance is now correctly calculated in the diffusion-operator for multi-component cases
10/04/24 (TRUST) New feature  : Add series of problems XXX_List_Concenration & XXX_List_Concenration_Turbulent that can be used to dolve a list of N concentration equations. Possible to define different diffusion coefficients for each cloned equation (which is not the case of list_scalaire_passif problem !!!)